--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>my contact details are</h3>
-    <p>7016742475 <br> utkrisst@gmail.com </p>
+    <p>8200476905 <br> chawlaabhinav22@gmail.com </p>
     <form action="mailto:utkrisst@gmail.com" method="post" enctype="text/plain">
       <label for="">Your Name : </label>
       <input type="text" name="yourname" value=""><br>
