--- a/HTML- personal site/index.html
+++ b/HTML- personal site/index.html
@@ -9,13 +9,13 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="..\mypicture.png" alt="utkrisst picture"></td>
+      <td><img src="images\mypicture.png" alt="utkrisst picture"></td>
       <td>
-        <h1>Abhinav CHawla</h1>
+        <h1>UTKRISST SHANKAR</h1>
         <P>
           <em>creator of this page is <strong>UTKRISST</strong></em>
         </P>
-        <p>this is a paragraph in my website which i have just started to build</p>
+        <p>I welcome you on my first website</p>
       </td>
     </tr>
   </table>
